fix: wrap long hashes

--- a/src/App.css
+++ b/src/App.css
@@ -38,59 +38,72 @@
   height: auto;
   margin: 0 auto;
   justify-content: space-between;
-}
-
-.main-block-div .block-info-div {
-  width: 45%;
-  border: 5px solid;
-
-  .block-infos {
-    display: flex;
-    flex-direction: column;
-    padding: 5px 10px 5px 10px;
-    font-size: large;
-    text-align: start;
-
-    >p {
-      margin: 0;
-    }
-
-    >span {
-      overflow: hidden;
-      white-space: nowrap;
-      text-overflow: ellipsis;
-    }
-  }
-}
-
-.main-block-div .block-transactions {
-  width: 50%;
-  border: 5px solid;
-
-  .transactions-infos {
-    padding: 5px 10px 5px 10px;
-    font-size: large;
-    text-align: start;
-  }
-
-  .transactions-list {
-    overflow-y: scroll;
-    max-height: 60vh;
-
-    padding: 5px 10px 5px 10px;
-    text-align: start;
+  
+  .block-info-div {
+    width: 45%;
+    border: 5px solid;
+  
+    .block-data-container {
+      display: flex;
+      flex-wrap: wrap;
+  
+      .block-infos {
+        display: flex;
+        flex-direction: column;
+        min-width: 0;
+        padding: 5px 10px 5px 10px;
+        font-size: large;
+        text-align: start;
     
+        >p {
+          word-break: break-all;
+          overflow-wrap: anywhere;
+          margin: 10px 0 0;
+        }
+      }
+  
+      .block-image {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+  
+        >img {
+          width: 30%;
+        }
+      }
+    }
+  };
 
-    .transaction-data {
-      border: 3px solid;
-      margin: 10px 5px;
-      padding: 5px;
-      overflow-x: hidden;
-      white-space: nowrap;
-      text-overflow: ellipsis;
-
-      >p {
-        margin: 0;
+  .block-transactions {
+    width: 50%;
+    border: 5px solid;
+  
+    .transactions-infos {
+      padding: 5px 10px 5px 10px;
+      font-size: large;
+      text-align: start;
+    }
+  
+    .transactions-list {
+      overflow-y: scroll;
+      max-height: 60vh;
+  
+      padding: 5px 10px 5px 10px;
+      text-align: start;
+      
+  
+      .transaction-data {
+        border: 3px solid;
+        margin: 10px 5px;
+        padding: 5px;
+        overflow-x: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+  
+        >p {
+          margin: 0;
+        }
       }
     }
   }
